tests/paczka1/small_fuzzy/44259630.err
Error in line 1: bSVFrvBp A591 95,6
Error in line 8: NyFdsBQH A591 49,46
Error in line 6: NyFdsBQH A303 7,2
